# Week4-SmartTravelPlanner

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .vercelignore  CLAUDE.md  CODE_REVIEW_NOTES.md  README.md  REQUIREMENTS_CHECKLIST.md  docker-compose.yml  index.py  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Dockerfile  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: config.py  logging_config.py  main.py  smoke_test.py  tracing.py
backend/app/agent/: __init__.py  compare.py  graph.py  registry.py  synthesize.py
backend/app/api/: deps.py
backend/app/auth/: hashing.py  jwt.py
backend/app/cache/: __init__.py  ttl.py
backend/app/db/: __init__.py  init_db.py  session.py
backend/app/llm/: providers.py  router.py
data/: destinations.csv
docs/: CODE_REVIEW_SURVIVAL.md  DAY1_CODE_WALKTHROUGH.md  LIVE_VERIFICATION.md  MANUAL_PROOF.md  PLANNER_VS_REACT.md  architecture.md  architecture_cinema.html  architecture_diagram.html  architecture_diagram.md  demo_story.md  deployment.md
frontend/: .env.example  Dockerfile  index.html  nginx.conf.template  package.json  tsconfig.json
frontend/src/: App.tsx  styles.css
tests/: conftest.py  test_agent_e2e.py  test_agent_registry.py  test_auth.py  test_cache.py  test_compare.py  test_llm_providers.py  test_logging.py  test_schemas.py  test_streaming.py  test_tool_classify.py  test_tool_live_conditions.py  test_tool_retrieve_knowledge.py  test_tracing.py  test_webhook.py
(+87 files in other folders)
